cabal-version: 3.6
name:          roguefunctor
version:       0.0.0.0
synopsis:      A roguelike toolkit library
description:   A roguelike toolkit library
homepage:      https://github.com/PPKFS/roguefunctor
bug-reports:   https://github.com/PPKFS/roguefunctor/issues
license:       MIT
author:        Avery
maintainer:    Avery <thecommunistduck@hotmail.co.uk>
copyright:     2024 Avery
category:      Game Development
build-type:    Simple
tested-with:   GHC == 9.8.2

source-repository head
  type:     git
  location: https://github.com/PPKFS/roguefunctor.git

common common-options
  build-depends:
    base >= 4.17.2 && < 5,
    containers >= 0.6.7 && < 1.7,
    template-haskell >= 2.19.0 && < 3.20,
    effectful-core >= 2.3.0 && < 3.4,
    effectful-plugin >= 1.1.0 && < 2.2,
    effectful-th >= 1.0.0 && < 2.1,
    text >= 2.0.2 && < 3.1,
    text-display >= 0.0.5 && < 1.0,
    breadcrumbs >= 1.0.0.0 && <= 10.0.0.0,
    bearlibterminal,
    optics,
    optics-core >= 0.4.0.0,
    unliftio,
    enummapset,
    mono-traversable,
    vector,
    relude,
    random

  ghc-options:
    -Wall -Wcompat -Widentities -Wredundant-constraints
    -Wno-unused-packages -Wno-deprecations -fhide-source-paths
    -Wno-unused-top-binds -Wmissing-deriving-strategies -O2
    -flate-specialise -fspecialise-aggressively
    -fprint-potential-instances -fno-warn-unused-do-bind -haddock
    -fwrite-ide-info -fplugin=Effectful.Plugin -Wunused-packages

  default-language:   GHC2021
  default-extensions:
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DerivingStrategies
    DuplicateRecordFields
    FunctionalDependencies
    InstanceSigs
    LambdaCase
    MultiWayIf
    NoImplicitPrelude
    OverloadedLabels
    OverloadedStrings
    QuasiQuotes
    StrictData
    TemplateHaskell
    TypeFamilies
    UndecidableInstances
    ViewPatterns

library
  import: common-options
  hs-source-dirs:  src
  exposed-modules:
    Rogue.Prelude
    Rogue.Geometry.V2
    Rogue.Events
    Rogue.Colour
    Rogue.Window
    Rogue.Config
    Rogue.Geometry.Rectangle
    Rogue.Array2D.Unboxed
