cabal-version: 3.6
name:          roguefunctor
version:       0.0.0.1
synopsis:      A roguelike toolkit library
description:   A roguelike toolkit library
homepage:      https://github.com/PPKFS/roguefunctor
bug-reports:   https://github.com/PPKFS/roguefunctor/issues
license:       MIT
author:        Avery
maintainer:    Avery <thecommunistduck@hotmail.co.uk>
copyright:     2024 Avery
category:      Game Development
build-type:    Simple
tested-with:   GHC ==9.8.2

source-repository head
  type:     git
  location: https://github.com/PPKFS/roguefunctor.git

common common-options
  build-depends:
    , aeson
    , astar
    , base              >=4.17.2 && <5
    , bearlibterminal
    , containers        >=0.6.7  && <1.7
    , enummapset
    , exceptions
    , hashable
    , mono-traversable
    , mtl
    , optics
    , random
    , relude
    , template-haskell  >=2.19.0 && <3.20
    , text              >=2.0.2  && <3.1
    , text-display      >=0.0.5  && <1.0
    , transformers
    , vector            >=0.13
    , voronoi

  ghc-options:
    -Wall -Wcompat -Widentities -Wredundant-constraints
    -Wno-unused-packages -Wno-deprecations -fhide-source-paths
    -Wno-unused-top-binds -Wmissing-deriving-strategies -O2
    -flate-specialise -fspecialise-aggressively
    -fprint-potential-instances -fno-warn-unused-do-bind -haddock
    -fwrite-ide-info -Wunused-packages

  default-language:   GHC2021
  default-extensions:
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DerivingStrategies
    DuplicateRecordFields
    FunctionalDependencies
    InstanceSigs
    LambdaCase
    MultiWayIf
    NoImplicitPrelude
    OverloadedLabels
    OverloadedStrings
    QuasiQuotes
    StrictData
    TemplateHaskell
    TypeFamilies
    UndecidableInstances
    ViewPatterns

library
  import:          common-options
  hs-source-dirs:  src
  exposed-modules:
    Rogue.Array2D.Boxed
    Rogue.Array2D.Sparse
    Rogue.Array2D.Unboxed
    Rogue.AStar
    Rogue.Colour
    Rogue.Config
    Rogue.Events
    Rogue.FieldOfView.Raycasting
    Rogue.FieldOfView.Visibility
    Rogue.Geometry.Line
    Rogue.Geometry.Rectangle
    Rogue.Geometry.V2
    Rogue.Geometry.V2D
    Rogue.Monad
    Rogue.Objects.Entity
    Rogue.Objects.Object
    Rogue.Objects.Store
    Rogue.Objects.Tag
    Rogue.Prelude
    Rogue.Random
    Rogue.Rendering.Print
    Rogue.Tilemap
    Rogue.Window

    -- currently incomplete
    -- Rogue.Array2D.Mutable
    -- Rogue.FieldOfView.Milazzo
    -- Rogue.FieldOfView.SymmectricShadowcasting
    -- Rogue.Property.TH
    -- Rogue.Property.Has
    -- Rogue.Rendering.Viewport
